Fix feature list title on mobile

--- a/components/FeatureList/index.module.scss
+++ b/components/FeatureList/index.module.scss
@@ -82,6 +82,12 @@
           font-size: 48px;
           line-height: 56px;
         }
+
+        @media (max-width: 508px) {
+          > p {
+            display: inline;
+          }
+        }
       }
 
       .subtitle {
